# c11_14_playground

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
clone_build/: dlib.in  googletest.in
gtest/: gtest.cc  gtest_cast.cc  gtest_cast.h  gtest_move.cc  gtest_move.h  gtest_padding.cc  gtest_padding.h  gtest_rule_of_five.cc  gtest_rule_of_five.h  gtest_smart_pointer.cc  gtest_smart_pointer.h  gtest_test.cc  gtest_test.h  gtest_virtual_destructor.cc  gtest_virtual_destructor.h
src/: main.cc
